hphp/test/zend/good/tests/classes/bug27468.php
<?php
class foo {
	function __destruct() {
		foreach ($this->x as $x);
	}
}
new foo();
echo 'OK';
?>